--- a/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
+++ b/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
@@ -79,22 +79,14 @@
             </DataGrid.CellStyle>
             
             <DataGrid.Columns>
-                <DataGridTemplateColumn IsReadOnly="True" Width="65">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center"
-                                        Visibility="{Binding IsSelected, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}">
-                                <Button Content="Open" Width="50" Margin="0" Cursor="Hand" Command="{Binding DataContext.ShowDetailsCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" 
-                                        Foreground="CadetBlue" Style="{StaticResource showButton}"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                
                 <DataGridTemplateColumn IsReadOnly="True" Width="100">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
+                                <StackPanel.InputBindings>
+                                    <MouseBinding Command="{Binding DataContext.ShowDetailsCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Gesture="LeftDoubleClick"/>
+                                </StackPanel.InputBindings>
+                                
                                 <TextBlock Text="{Binding Path=DungeonSize}" TextAlignment="Center" VerticalAlignment="Center" Margin="5" FontSize="14" />
                                 <TextBlock Text="{loc:Loc Normal}" TextAlignment="Center" VerticalAlignment="Center" FontSize="14" 
                                            Visibility="{Binding Path=Difficulty, Converter={StaticResource IntToVisibility}, ConverterParameter=true:4}"/>
@@ -118,6 +110,10 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel>
+                                <StackPanel.InputBindings>
+                                    <MouseBinding Command="{Binding DataContext.ShowDetailsCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Gesture="LeftDoubleClick"/>
+                                </StackPanel.InputBindings>
+                                
                                 <TextBlock Text="{Binding Path=Name}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" Opacity="0.5" 
                                            Visibility="{Binding IsWin, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}"/>
                                 <TextBlock Text="{Binding Path=Name}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" 
@@ -146,6 +142,10 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel>
+                                <StackPanel.InputBindings>
+                                    <MouseBinding Command="{Binding DataContext.ShowDetailsCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Gesture="LeftDoubleClick"/>
+                                </StackPanel.InputBindings>
+                                
                                 <TextBlock Text="{Binding Path=DamageDone}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" Opacity="0.5" 
                                            Visibility="{Binding IsWin, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}"/>
                                 <TextBlock Text="{Binding Path=DamageDone}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" 
@@ -174,6 +174,10 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel>
+                                <StackPanel.InputBindings>
+                                    <MouseBinding Command="{Binding DataContext.ShowDetailsCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Gesture="LeftDoubleClick"/>
+                                </StackPanel.InputBindings>
+                                
                                 <TextBlock Text="{Binding Path=HealDone}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" Opacity="0.5" 
                                            Visibility="{Binding IsWin, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}"/>
                                 <TextBlock Text="{Binding Path=HealDone}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" 
@@ -202,6 +206,10 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel>
+                                <StackPanel.InputBindings>
+                                    <MouseBinding Command="{Binding DataContext.ShowDetailsCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Gesture="LeftDoubleClick"/>
+                                </StackPanel.InputBindings>
+                                
                                 <TextBlock Text="{Binding Path=DamageTaken}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" Opacity="0.5" 
                                            Visibility="{Binding IsWin, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}"/>
                                 <TextBlock Text="{Binding Path=DamageTaken}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" 
@@ -230,6 +238,10 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel>
+                                <StackPanel.InputBindings>
+                                    <MouseBinding Command="{Binding DataContext.ShowDetailsCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Gesture="LeftDoubleClick"/>
+                                </StackPanel.InputBindings>
+                                
                                 <TextBlock Text="{Binding Path=EnergyRecovery}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" Opacity="0.5" 
                                            Visibility="{Binding IsWin, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}"/>
                                 <TextBlock Text="{Binding Path=EnergyRecovery}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" 
@@ -258,6 +270,10 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel>
+                                <StackPanel.InputBindings>
+                                    <MouseBinding Command="{Binding DataContext.ShowDetailsCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Gesture="LeftDoubleClick"/>
+                                </StackPanel.InputBindings>
+                                
                                 <TextBlock Text="{Binding Path=DeathNumber}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" Opacity="0.5" 
                                            Visibility="{Binding IsWin, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:true}"/>
                                 <TextBlock Text="{Binding Path=DeathNumber}" TextAlignment="Center" Margin="10" FontSize="14" FontFamily="Comic Sans MS" 
@@ -286,6 +302,10 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <StackPanel.InputBindings>
+                                    <MouseBinding Command="{Binding DataContext.ShowDetailsCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" Gesture="LeftDoubleClick"/>
+                                </StackPanel.InputBindings>
+                                
                                 <Icon:PackIconMaterial Visibility="{Binding Path=IsReady, Converter={StaticResource BoolToVisibility}, ConverterParameter=true}"
                                                    Kind="Check" Foreground="Green" Style="{StaticResource menuButtonIcon}" Width="10" Height="10"
                                                    HorizontalAlignment="Center" ToolTip="{loc:Loc Ready}" Cursor="Help"/>
