--- a/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
+++ b/src/CombatAnalysis.App/Views/DamageDoneDetailsView.xaml
@@ -69,7 +69,7 @@
             </StackPanel>
         </StackPanel>
 
-        <DataGrid Margin="20 30 20 45" Grid.Row="2" Grid.Column="2" Height="450" GridLinesVisibility="None" 
+        <DataGrid Margin="20 30 20 45" Grid.Row="2" Grid.Column="2" GridLinesVisibility="None" 
                  CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
                  VerticalAlignment="Top" Background="Transparent" ItemsSource="{Binding GeneralInformations}"
                  Visibility="{Binding ElementName=detailsType, Path=SelectedIndex, Converter={StaticResource IntToVisibility}, ConverterParameter=true:0}">
