--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/chatMessage.scss
@@ -9,7 +9,7 @@
     padding: 15px;
     overflow-y: scroll;
 
-    &__content {
+    &__content, &__other-content {
         display: flex;
         flex-direction: column;
 
@@ -70,10 +70,13 @@
 
         .message-title {
             display: flex;
+            flex-direction: column;
             justify-content: start;
             width: 90%;
-            align-items: center;
-            gap: 20px;
+
+            .message-time {
+                font-size: 11px;
+            }
 
             .message-menu {
                 display: flex;
@@ -156,9 +159,9 @@
 
         .system-message {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            gap: 20px;
 
             &__message {
                 display: flex;
@@ -171,7 +174,7 @@
             &__time {
                 display: flex;
                 justify-content: center;
-                font-size: 12px;
+                font-size: 11px;
                 font-weight: bold;
                 opacity: 0.4;
             }
