--- a/src/CombatAnalysis.App/Views/CombatLogInformationView.xaml
+++ b/src/CombatAnalysis.App/Views/CombatLogInformationView.xaml
@@ -34,7 +34,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="0.25*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="0.75*"/>
+            <RowDefinition Height="0.6*"/>
             <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
 
@@ -81,74 +81,77 @@
         </Grid>
 
         <StackPanel Grid.Row="1" Grid.Column="2">
-            <TabControl Background="Transparent" MaxHeight="400" SelectedIndex="{Binding SelectedCombatLogTypeTabItem}">
+            <TabControl Background="Transparent" SelectedIndex="{Binding SelectedCombatLogTypeTabItem}">
                 <TabItem Header="{loc:Loc PublicLogs}" FontSize="15">
-                    <StackPanel Margin="10 50">
-                        <ScrollViewer MaxHeight="200" VerticalScrollBarVisibility="Auto">
-                            <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool},ConverterParameter=true}" 
+                    <StackPanel Margin="10">
+                        <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool},ConverterParameter=true}" 
                                     HorizontalAlignment="Center" VerticalAlignment="Top" Margin="20">
-                                <TextBlock Text="{loc:Loc Loading}" Opacity="0.4" HorizontalAlignment="Center" Margin="0 10"
+                            <TextBlock Text="{loc:Loc Loading}" Opacity="0.4" HorizontalAlignment="Center" Margin="0 10"
                                            Visibility="{Binding CombatLogLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:1:='}"/>
-                                <TextBlock Text="{loc:Loc LoadingFailed}" Foreground="Orange" HorizontalAlignment="Center" Margin="0 10"
+                            <TextBlock Text="{loc:Loc LoadingFailed}" Foreground="Orange" HorizontalAlignment="Center" Margin="0 10"
                                            Visibility="{Binding CombatLogLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:3:='}"/>
-                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                    <TextBlock HorizontalAlignment="Center" Text="{loc:Loc PublicLogs}" Margin="0" FontSize="16" />
-                                    <Button Style="{StaticResource userButton}" Margin="5 -10" mvx:Bi.nd="Command ReloadCombatsCommand" ToolTip="{Binding RefreshLogs}"
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                <TextBlock HorizontalAlignment="Center" Text="{loc:Loc PublicLogs}" Margin="0" FontSize="16" />
+                                <Button Style="{StaticResource userButton}" Margin="5 -10" mvx:Bi.nd="Command ReloadCombatsCommand" ToolTip="{Binding RefreshLogs}"
                                             IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool},ConverterParameter=true}">
-                                        <Icon:PackIconMaterial Kind="Reload" Foreground="Gray"/>
-                                    </Button>
-                                </StackPanel>
-                                <Button mvx:Bi.nd="Command LoadCombatsCommand" Content="{loc:Loc Upload}" Width="100" FontSize="16"
+                                    <Icon:PackIconMaterial Kind="Reload" Foreground="Gray"/>
+                                </Button>
+                            </StackPanel>
+                            <Button mvx:Bi.nd="Command LoadCombatsCommand" Content="{loc:Loc Upload}" Width="100" FontSize="16"
                                         Margin="10,10" Style="{StaticResource showButton}" Foreground="Blue"
                                         Visibility="{Binding CombatLogs.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}"
                                         IsEnabled="{Binding CombatListSelectedIndex, Converter={StaticResource IntToXAMLBool}, ConverterParameter='-1:>'}"/>
+                            <ScrollViewer MaxHeight="200" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                                 <ListBox Background="Transparent" ItemsSource="{Binding CombatLogs}" SelectedIndex="{Binding CombatListSelectedIndex}"
                                     Visibility="{Binding CombatLogs.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}">
                                     <ListBox.ItemTemplate>
                                         <DataTemplate>
                                             <StackPanel Margin="10" Orientation="Horizontal" HorizontalAlignment="Center">
-                                                <TextBlock FontSize="14" Text="{Binding Path=Name}" Margin="15" />
-                                                <TextBlock FontSize="14" Text="{Binding Path=Date, StringFormat=MM.dd.yyyy hh:mm}" Margin="15" />
+                                                <TextBlock FontSize="14" Text="{Binding Path=Name}" Margin="10 5" />
+                                                <TextBlock FontSize="14" Text="{Binding Path=Date, StringFormat=MM.dd.yyyy hh:mm}" Margin="10 5" />
                                             </StackPanel>
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
                                 </ListBox>
-                                <StackPanel Visibility="{Binding CombatLogLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:2:='}">
-                                    <TextBlock Text="{loc:Loc Empty}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="5"
-                                           Visibility="{Binding CombatLogs.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:='}"/>
-                                </StackPanel>
+                            </ScrollViewer>
+                            <StackPanel Visibility="{Binding UploadingLogs, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}">
+                                <TextBlock Text="Loading..." FontSize="13" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="0 5"/>
                             </StackPanel>
-                        </ScrollViewer>
+                            <StackPanel Visibility="{Binding CombatLogLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:2:='}">
+                                <TextBlock Text="{loc:Loc Empty}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="5"
+                                           Visibility="{Binding CombatLogs.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:='}"/>
+                            </StackPanel>
+                        </StackPanel>
                     </StackPanel>
                 </TabItem>
                 <TabItem Header="{loc:Loc PrivateLogs}" FontSize="15" IsEnabled="{Binding IsAuth, Converter={StaticResource BoolToXAMLBool}, ConverterParameter=false}">
-                    <StackPanel Margin="10 50">
-                        <ScrollViewer MaxHeight="210" VerticalScrollBarVisibility="Auto">
-                            <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool},ConverterParameter=true}" 
+                    <StackPanel Margin="10">
+                        <StackPanel IsEnabled="{Binding IsParsing, Converter={StaticResource BoolToXAMLBool},ConverterParameter=true}" 
                                     HorizontalAlignment="Center" VerticalAlignment="Top" Margin="20">
-                                <TextBlock Text="{loc:Loc Loading}" Opacity="0.4" HorizontalAlignment="Center" Margin="0 10"
+                            <TextBlock Text="{loc:Loc Loading}" Opacity="0.4" HorizontalAlignment="Center" Margin="0 10"
                                            Visibility="{Binding CombatLogByUserLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:1:='}"/>
-                                <TextBlock Text="{loc:Loc LoadingFailed}" Foreground="Orange" HorizontalAlignment="Center" Margin="0 10"
+                            <TextBlock Text="{loc:Loc LoadingFailed}" Foreground="Orange" HorizontalAlignment="Center" Margin="0 10"
                                            Visibility="{Binding CombatLogByUserLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:3:='}"/>
-                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                    <TextBlock HorizontalAlignment="Center" Text="{loc:Loc PrivateLogs}" Margin="0" FontSize="16" />
-                                    <Button Style="{StaticResource userButton}" Margin="5 -10" mvx:Bi.nd="Command ReloadCombatsByUserCommand" ToolTip="{loc:Loc RefreshLogs}">
-                                        <Icon:PackIconMaterial Kind="Reload" Foreground="Gray"/>
-                                    </Button>
-                                </StackPanel>
-                                <StackPanel Orientation="Horizontal" Width="250" IsEnabled="{Binding RemovingInProgress, Converter={StaticResource BoolToXAMLBool}, ConverterParameter=true}">
-                                    <Button mvx:Bi.nd="Command LoadCombatsByUserCommand" Content="{loc:Loc Upload}" Width="100" FontSize="16"
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                <TextBlock HorizontalAlignment="Center" Text="{loc:Loc PrivateLogs}" Margin="0" FontSize="16" />
+                                <Button Style="{StaticResource userButton}" Margin="5 -10" mvx:Bi.nd="Command ReloadCombatsByUserCommand" ToolTip="{loc:Loc RefreshLogs}">
+                                    <Icon:PackIconMaterial Kind="Reload" Foreground="Gray"/>
+                                </Button>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Width="250" IsEnabled="{Binding RemovingInProgress, Converter={StaticResource BoolToXAMLBool}, ConverterParameter=true}">
+                                <Button mvx:Bi.nd="Command LoadCombatsByUserCommand" Content="{loc:Loc Upload}" Width="100" FontSize="16"
                                             Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}"
                                             IsEnabled="{Binding CombatListSelectedIndex, Converter={StaticResource IntToXAMLBool}, ConverterParameter='-1:>'}"
                                             Margin="10,10" Style="{StaticResource showButton}" Foreground="Blue" HorizontalAlignment="Center"/>
-                                    <Icon:PackIconMaterial Kind="Delete" Foreground="Orange" Style="{StaticResource menuButtonIcon}" 
+                                <Icon:PackIconMaterial Kind="Delete" Foreground="Orange" Style="{StaticResource menuButtonIcon}" 
                                                            Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}" mvx:Bi.nd="Command DeleteCombatCommand"
                                                            HorizontalAlignment="Center" ToolTip="{loc:Loc RemovePrivateLog}">
-                                        <Icon:PackIconMaterial.InputBindings>
-                                            <MouseBinding Command="{Binding DeleteCombatCommand}" Gesture="LeftClick"/>
-                                        </Icon:PackIconMaterial.InputBindings>
-                                    </Icon:PackIconMaterial>
-                                </StackPanel>
+                                    <Icon:PackIconMaterial.InputBindings>
+                                        <MouseBinding Command="{Binding DeleteCombatCommand}" Gesture="LeftClick"/>
+                                    </Icon:PackIconMaterial.InputBindings>
+                                </Icon:PackIconMaterial>
+                            </StackPanel>
+                            <ScrollViewer MaxHeight="200" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                                 <ListBox Background="Transparent" ItemsSource="{Binding CombatLogsForTargetUser}" SelectedIndex="{Binding CombatListSelectedIndex}"
                                         Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:>'}">
                                     <ListBox.ItemTemplate>
@@ -160,14 +163,17 @@
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
                                 </ListBox>
-                                <StackPanel Visibility="{Binding CombatLogByUserLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:2:='}">
-                                    <TextBlock Text="{loc:Loc Empty}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="5"
-                                           Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:='}"/>
-                                </StackPanel>
-                                <TextBlock Text="{loc:Loc RemovingInProgress}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="5"
-                                            Visibility="{Binding RemovingInProgress, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
+                            </ScrollViewer>
+                            <StackPanel Visibility="{Binding UploadingLogs, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}">
+                                <TextBlock Text="Loading..." FontSize="13" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="0 5"/>
                             </StackPanel>
-                        </ScrollViewer>
+                            <StackPanel Visibility="{Binding CombatLogByUserLoadingStatus, Converter={StaticResource IntToVisibility}, ConverterParameter='true:2:='}">
+                                <TextBlock Text="{loc:Loc Empty}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="5"
+                                           Visibility="{Binding CombatLogsForTargetUser.Count, Converter={StaticResource IntToVisibility}, ConverterParameter='true:0:='}"/>
+                            </StackPanel>
+                            <TextBlock Text="{loc:Loc RemovingInProgress}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Gray" Margin="5"
+                                            Visibility="{Binding RemovingInProgress, Converter={StaticResource BoolToVisibility}, ConverterParameter=true:false}"/>
+                        </StackPanel>
                     </StackPanel>
                 </TabItem>
             </TabControl>
